# academics-neu

./: .DS_Store.REMOVED.git-id.REMOVED.git-id  .gitignore  .gitmodules  02_song_hierarchy.sql.REMOVED.git-id.REMOVED.git-id  CREATE_CLASS-1.sql.REMOVED.git-id.REMOVED.git-id  Data Structures.md  README-20230727.md  README-HW8.md  README.md  Readme.md  UML.md  USEME.md  change_dates.sh  class.session.sql.REMOVED.git-id  exit.REMOVED.git-id  mini_project2.pde.REMOVED.git-id  modify_commit_dates.sh  tester
.obsidian/: app.json  workspace.json
5008-DSA/homework-02-Arrays&Pointers/: CMakeLists.txt  README.md  main.c  tests.c
5008-DSA/homework-02-Arrays&Pointers/instructions/: README.md
5200-DBMS/: Linkedin strategy.md
5600-systems/: hw6.org  hw6.txt
5700-networks/: 1 - Basics.md  2 - Connection.md
5770/: HW1.md
5800-algorithms/: 13-Greedy.md  14 - Graphs.md  14-BasicGraphs.md  15-WeightedGraphs.md  16-MSTs.md  Interview Prep.md  Lecture 18 - MSTs.md  Lecture 22.md  Untitled.md
6740-networks/: Extra.md  Lecture 1 - Review of Protocols.md  Lecture 2.md  Lecture 3.md  Lecture 4.md  Things to watch.md
6740-security/: Lab Notes.md  Lab2.md
ARTG 5520/: .DS_Store.REMOVED.git-id.REMOVED.git-id
CS 5200 - DBMS/: .DS_Store.REMOVED.git-id.REMOVED.git-id  homework4ShahP.zip.REMOVED.git-id.REMOVED.git-id
HW3/: Chinook_MySql (1) (1).sql.REMOVED.git-id.REMOVED.git-id  create_databases-2 (1).sql.REMOVED.git-id.REMOVED.git-id
HW5/: CMakeLists.txt  Report.md  insertion_test.c  insertion_test.out  sorts.h  tester.c  tester.out
Notes/: Data StructureAlgorithm Notes.html  (+2 more)
(+1895 files in other folders)
